--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,21 @@
 # Site settings
-title: Your awesome title
+title: M Clarisse Valera
 email: clarisse.valera@cal.berkeley.edu
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Clarisse Valera's portfolio website
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://mcvalera.github.io/" # the base hostname & protocol for your site
 twitter_username: claaang
 github_username:  mcvalera
 
 # Build settings
 markdown: kramdown
+defaults:
+  -
+    scope:
+      path: ''
+      type: 'posts'
+    values:
+      layout: 'post'
+      category: blog
+      author: Clarisse
